--- a/_layouts/contact.html
+++ b/_layouts/contact.html
@@ -31,7 +31,7 @@ title: Contact Us - Athlete A BJJ
           </div>
         </div>
         <div class="w-full md:w-1/2">
-          <h2 class="text-2xl font-bold mb-4">Find Us</h2>
+          <h2 class="text-2xl font-bold mb-4">Where to Find Us</h2>
           <div class="aspect-w-16 aspect-h-9">
             <iframe
               src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2381.2248025639783!2d-6.2408259!3d53.3571316!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48670f558d0bab7b%3A0x96817aee9d3b1eb9!2sAthlete%20A%20Brazilian%20Jiu%20Jitsu!5e0!3m2!1sen!2sie!4v1727537087915!5m2!1sen!2sie"
