Clean up schedules a little bit

--- a/_layouts/classes/gi.html
+++ b/_layouts/classes/gi.html
@@ -74,11 +74,17 @@ permalink: /classes/gi/
               <td class="border p-2">Monday</td>
               <td class="border p-2">6:00 PM - 7:30 PM</td>
               <td class="border p-2">Gi BJJ Fundamentals</td>
+              <td class="border p-2">Intermediate/Advanced</td>
+            </tr>
+            <tr class="bg-gray-50">
+              <td class="border p-2">Monday</td>
+              <td class="border p-2">7:30 PM - 8:30 PM</td>
+              <td class="border p-2">Gi BJJ Advanced</td>
               <td class="border p-2">All Levels</td>
             </tr>
             <tr class="bg-gray-50">
               <td class="border p-2">Tuesday</td>
-              <td class="border p-2">7:00 PM - 8:30 PM</td>
+              <td class="border p-2">6:00 PM - 7:30 PM</td>
               <td class="border p-2">Gi BJJ Advanced</td>
               <td class="border p-2">Intermediate/Advanced</td>
             </tr>
@@ -90,7 +96,7 @@ permalink: /classes/gi/
             </tr>
             <tr class="bg-gray-50">
               <td class="border p-2">Thursday</td>
-              <td class="border p-2">7:00 PM - 8:30 PM</td>
+              <td class="border p-2">6:00 PM - 7:30 PM</td>
               <td class="border p-2">Gi BJJ Competition Prep</td>
               <td class="border p-2">Intermediate/Advanced</td>
             </tr>
@@ -102,7 +108,7 @@ permalink: /classes/gi/
             </tr>
             <tr class="bg-gray-50">
               <td class="border p-2">Saturday</td>
-              <td class="border p-2">10:00 AM - 11:30 AM</td>
+              <td class="border p-2">6:00 PM - 7:30 PM</td>
               <td class="border p-2">Gi BJJ Fundamentals</td>
               <td class="border p-2">All Levels</td>
             </tr>
