--- a/_layouts/classes/no-gi-bjj.html
+++ b/_layouts/classes/no-gi-bjj.html
@@ -78,28 +78,16 @@ title: No Gi BJJ Classes - Athlete A BJJ
           </thead>
           <tbody>
             <tr class="bg-white">
-              <td class="border p-2">Monday</td>
-              <td class="border p-2">7:30 PM - 9:00 PM</td>
-              <td class="border p-2">No-Gi Fundamentals</td>
-              <td class="border p-2">John Silva</td>
-            </tr>
-            <tr class="bg-gray-50">
               <td class="border p-2">Wednesday</td>
-              <td class="border p-2">7:30 PM - 9:00 PM</td>
-              <td class="border p-2">Advanced No-Gi Techniques</td>
-              <td class="border p-2">Maria Santos</td>
+              <td class="border p-2">6:00 PM - 7:30 PM</td>
+              <td class="border p-2">Intermediate No-Gi Techniques</td>
+              <td class="border p-2">Adriano</td>
             </tr>
             <tr class="bg-white">
               <td class="border p-2">Friday</td>
               <td class="border p-2">6:00 PM - 7:30 PM</td>
               <td class="border p-2">No-Gi Open Mat</td>
-              <td class="border p-2">Rotating Instructors</td>
-            </tr>
-            <tr class="bg-gray-50">
-              <td class="border p-2">Saturday</td>
-              <td class="border p-2">11:00 AM - 12:30 PM</td>
-              <td class="border p-2">No-Gi All Levels</td>
-              <td class="border p-2">John Silva</td>
+              <td class="border p-2">Adriano</td>
             </tr>
           </tbody>
         </table>
