--- a/_layouts/classes/open-mat.html
+++ b/_layouts/classes/open-mat.html
@@ -70,18 +70,8 @@ permalink: /classes/open-mat/
           </thead>
           <tbody>
             <tr class="bg-white">
-              <td class="border p-2">Tuesday</td>
-              <td class="border p-2">8:00 PM - 9:30 PM</td>
-              <td class="border p-2">All Levels</td>
-            </tr>
-            <tr class="bg-gray-50">
-              <td class="border p-2">Thursday</td>
-              <td class="border p-2">8:00 PM - 9:30 PM</td>
-              <td class="border p-2">All Levels</td>
-            </tr>
-            <tr class="bg-white">
               <td class="border p-2">Saturday</td>
-              <td class="border p-2">12:00 PM - 2:00 PM</td>
+              <td class="border p-2">11:00 AM - 1:00 PM</td>
               <td class="border p-2">All Levels</td>
             </tr>
           </tbody>
