Update images and justify text

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,7 @@
     <div class="flex items-center">
       <img src="/images/aa-logo.jpg" class="w-10 h-10 bg-red-600 rounded-full mr-2"/>
       <span class="text-xl font-bold">
-        <a href="/" class="hover:text-yellow-400">Athlete A BJJ</a>
+        <a href="/" class="hover:text-yellow-400">Athlete A Brazilian Jiu-Jitsu</a>
       </span>
     </div>
     <nav class="hidden md:flex space-x-4 font-bold">
