--- a/_layouts/classes/bjj-kids.html
+++ b/_layouts/classes/bjj-kids.html
@@ -13,11 +13,11 @@ permalink: /classes/bjj-kids/
         </div>
         <div class="w-full md:w-1/2">
           <h2 class="text-2xl font-bold mb-4">Empowering Kids Through BJJ</h2>
-          <p class="mb-4">At Athlete A, our Kids BJJ program is designed to help children develop physical skills,
+          <p class="mb-4 text-justify">At Athlete A, our Kids BJJ program is designed to help children develop physical skills,
             mental strength, and valuable life lessons through the art of Brazilian Jiu-Jitsu. Our classes are tailored
             to different age groups and skill levels, ensuring that every child receives the attention and guidance they
             need to thrive.</p>
-          <p class="mb-4">Our experienced instructors create a fun, safe, and supportive environment where kids can
+          <p class="mb-4 text-justify">Our experienced instructors create a fun, safe, and supportive environment where kids can
             learn, grow, and build lasting friendships. Through BJJ, children develop discipline, respect, confidence,
             and problem-solving skills that will benefit them both on and off the mats.</p>
           <a href="#schedule"
