--- a/_layouts/classes/no-gi-bjj.html
+++ b/_layouts/classes/no-gi-bjj.html
@@ -12,10 +12,10 @@ title: No Gi BJJ Classes - Athlete A BJJ
         </div>
         <div class="w-full md:w-1/2">
           <h2 class="text-2xl font-bold mb-4">Experience the Dynamic nature of No-Gi BJJ</h2>
-          <p class="mb-4">No-Gi Brazilian Jiu-Jitsu is a grappling-based martial art that focuses on ground fighting
+          <p class="mb-4 text-justify">No-Gi Brazilian Jiu-Jitsu is a grappling-based martial art that focuses on ground fighting
             techniques without the traditional gi (uniform). Practitioners wear lightweight, close-fitting attire such
             as rash guards and shorts, allowing for faster-paced, more dynamic movements.</p>
-          <p class="mb-4">At Athlete A, our No-Gi classes emphasize techniques that work without relying on grips on
+          <p class="mb-4 text-justify">At Athlete A, our No-Gi classes emphasize techniques that work without relying on grips on
             the gi, making it an excellent complement to traditional BJJ training and a valuable skill set for MMA and
             self-defense scenarios.</p>
           <a href="#schedule"
