--- a/_layouts/classes/open-mat.html
+++ b/_layouts/classes/open-mat.html
@@ -13,8 +13,8 @@ permalink: /classes/open-mat/
         </div>
         <div class="w-full md:w-1/2">
           <h2 class="text-2xl font-bold mb-4">Enhance Your Skills in a Free-Form Environment</h2>
-          <p class="mb-4">At Athlete A, our Open Mat sessions provide a unique opportunity for practitioners of all levels to refine their Brazilian Jiu-Jitsu skills in a relaxed, unstructured setting. These sessions are perfect for those looking to drill techniques, spar with different partners, or work on specific aspects of their game.</p>
-          <p class="mb-4">Our experienced instructors are on hand to provide guidance and answer questions, but the focus is on self-directed learning and exploration. Open Mat is an excellent complement to structured classes, allowing you to apply what you've learned and discover new aspects of your BJJ journey.</p>
+          <p class="mb-4 text-justify">At Athlete A, our Open Mat sessions provide a unique opportunity for practitioners of all levels to refine their Brazilian Jiu-Jitsu skills in a relaxed, unstructured setting. These sessions are perfect for those looking to drill techniques, spar with different partners, or work on specific aspects of their game.</p>
+          <p class="mb-4 text-justify">Our experienced instructors are on hand to provide guidance and answer questions, but the focus is on self-directed learning and exploration. Open Mat is an excellent complement to structured classes, allowing you to apply what you've learned and discover new aspects of your BJJ journey.</p>
           <a href="#schedule"
             class="inline-block bg-red-600 hover:bg-red-700 text-white font-bold py-2 px-4 rounded transition duration-300">
             View Open Mat Schedule
