--- a/_layouts/classes/womens.html
+++ b/_layouts/classes/womens.html
@@ -8,15 +8,15 @@ title: Women's BJJ Classes
     <div class="container mx-auto px-4">
       <div class="flex flex-col md:flex-row items-center md:items-start gap-8">
         <div class="w-full md:w-1/2">
-          <img src="/images/womens.png?height=400&width=600" alt="Women's BJJ Training" class="w-full h-auto rounded-lg shadow-lg">
+          <img src="/images/womens.jpeg?height=400&width=600" alt="Women's BJJ Training" class="w-full h-auto rounded-lg shadow-lg">
         </div>
         <div class="w-full md:w-1/2">
           <h2 class="text-2xl font-bold mb-4">Empowering Women Through BJJ</h2>
-          <p class="mb-4">At Athlete A, our Women's BJJ program is designed to help women develop physical skills,
+          <p class="mb-4 text-justify">At Athlete A, our Women's BJJ program is designed to help women develop physical skills,
             mental strength, and valuable life lessons through the art of Brazilian Jiu-Jitsu. Our classes are tailored
             to different skill levels, ensuring that every woman receives the attention and guidance she
             needs to thrive.</p>
-          <p class="mb-4">Our experienced instructors create a supportive and empowering environment where women can
+          <p class="mb-4 text-justify">Our experienced instructors create a supportive and empowering environment where women can
             learn, grow, and build lasting friendships. Through BJJ, women develop self-defense skills, confidence,
             physical fitness, and mental resilience that benefit them both on and off the mats.</p>
           <a href="#schedule"
