--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -7,7 +7,7 @@ title: Athlete A BJJ - Master the Art of Brazilian Jiu-Jitsu
   <section class="relative h-screen flex items-center justify-center">
     <div class="absolute inset-0 z-0">
       <img src="images/aa-hero-splash.jpeg" alt="BJJ training" class="w-full h-full object-cover">
-      <div class="absolute inset-0 bg-black opacity-50"></div>
+      <div class="absolute inset-0 bg-black opacity-40"></div>
     </div>
     <div class="relative z-10 text-center text-white px-4">
       <h1 class="text-4xl md:text-6xl font-bold mb-4">Master the Art of BJJ</h1>
@@ -19,7 +19,7 @@ title: Athlete A BJJ - Master the Art of Brazilian Jiu-Jitsu
         Start Your Journey
       </a>
     </div>
-    <a href="#why-choose-us" class="absolute bottom-20 left-1/2 transform -translate-x-1/2 text-white">
+    <a href="#why-choose-us" class="absolute bottom-20 left-1/2 transform -translate-x-1/2 text-white" onclick="event.preventDefault(); document.querySelector('#why-choose-us').scrollIntoView({ behavior: 'smooth' });">
       <i class="fas fa-chevron-down text-4xl animate-bounce"></i>
     </a>
   </section>
