--- a/_layouts/classes.html
+++ b/_layouts/classes.html
@@ -7,18 +7,15 @@ title: Our Classes - Athlete A BJJ
   <section class="py-16 bg-gray-100">
     <div class="container mx-auto px-4">
       <h1 class="text-4xl font-bold text-center mb-12">Our BJJ Classes</h1>
-      <div class="flex flex-wrap justify-center gap-8">
+      <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8"">
         {% for class in site.data.classes %}
-          <a href="{{ class.url }}" class="block bg-white rounded-lg shadow-md p-6 flex-1 basis-full md:basis-[calc(50%-1rem)] lg:basis-[calc(33.333%-1rem)] hover:shadow-lg transition duration-300">
+          <div class="bg-white rounded-lg shadow-md p-6 transition duration-300">
             <h3 class="text-xl font-semibold mb-2">{{ class.name }}</h3>
             <p class="text-gray-600 mb-4">{{ class.description }}</p>
-            <h4 class="font-semibold mb-2">Schedule:</h4>
-            <ul class="list-disc list-inside">
-              {% for session in class.schedule %}
-                <li>{{ session.day }} at {{ session.time }}</li>
-              {% endfor %}
-            </ul>
-          </a>
+            <a href="{{ class.url }}" class="inline-block bg-red-600 hover:bg-red-700 text-white font-bold py-2 px-4 rounded-full transition duration-300">
+              Learn More
+            </a>
+          </div>
         {% endfor %}
       </div>
     </div>
