--- a/_layouts/beginners.html
+++ b/_layouts/beginners.html
@@ -20,7 +20,7 @@ title: Beginners - Athlete A BJJ
           <p class="mb-4 text-justify	">Whether you're looking to improve your fitness, learn self-defense, or simply try something
             new, BJJ offers a unique and rewarding experience for practitioners of all ages and backgrounds.</p>
           <a href="#get-started"
-            class="inline-block bg-yellow-400 hover:bg-yellow-500 text-white font-bold py-2 px-4 rounded-full transition duration-300">
+            class="inline-block bg-red-600 hover:bg-red-700 text-white font-bold py-2 px-4 rounded-full transition duration-300">
             Get Started Now
           </a>
         </div>
@@ -100,9 +100,6 @@ title: Beginners - Athlete A BJJ
             <p class="font-normal ml-6 mt-2">Don't worry about equipment - just wear comfortable workout clothes. We'll
               provide everything else you need.</p>
           </li>
-          <li class="font-semibold">Choose a membership plan
-            <p class="font-normal ml-6 mt-2">We offer flexible options to fit your schedule and goals.</p>
-          </li>
           <li class="font-semibold">Start your journey
             <p class="font-normal ml-6 mt-2">Attend classes regularly, practice consistently, and watch yourself grow!
             </p>
@@ -135,13 +132,13 @@ title: Beginners - Athlete A BJJ
     </div>
   </section>
 
-  <section class="py-16 bg-red-600 text-white">
+  <section class="py-16 bg-yellow-400 text-black">
     <div class="container mx-auto px-4 text-center">
       <h2 class="text-3xl font-bold mb-8">Ready to Begin Your BJJ Journey?</h2>
       <p class="text-xl mb-8 max-w-2xl mx-auto">Take the first step towards a new you. Join Athlete A today and
         discover the transformative power of Brazilian Jiu-Jitsu.</p>
       <a href="#"
-        class="bg-yellow-400 hover:bg-yellow-500 text-black text-lg px-8 py-3 rounded-full font-bold transition duration-300">
+        class="bg-red-600 hover:bg-red-700 text-white text-lg px-8 py-3 rounded-full font-bold transition duration-300">
         Sign Up for a Free Trial Class
       </a>
     </div>
