--- a/_layouts/classes/gi.html
+++ b/_layouts/classes/gi.html
@@ -16,7 +16,7 @@ permalink: /classes/gi/
           <p class="mb-4 text-justify">At Athlete A, our Gi BJJ program is designed to help practitioners of all levels develop their skills in the traditional form of Brazilian Jiu-Jitsu. Our classes focus on techniques that utilize the gi, emphasizing grip fighting, submissions, and positional control unique to gi training.</p>
           <p class="mb-4 text-justify">Our experienced instructors create a challenging yet supportive environment where students can learn, grow, and push their limits. Through Gi BJJ, practitioners develop technical proficiency, physical conditioning, and mental resilience that benefit them both on and off the mats.</p>
           <a href="#schedule"
-            class="inline-block bg-red-600 hover:bg-red-700 text-white font-bold py-2 px-4 rounded transition duration-300">
+            class="inline-block bg-red-600 hover:bg-red-700 text-white font-bold py-2 px-4 rounded-full transition duration-300">
             View Gi BJJ Class Schedule
           </a>
         </div>
