--- a/_layouts/classes.html
+++ b/_layouts/classes.html
@@ -7,17 +7,7 @@ title: Our Classes - Athlete A BJJ
   <section class="py-16 bg-gray-100">
     <div class="container mx-auto px-4">
       <h1 class="text-4xl font-bold text-center mb-12">Our BJJ Classes</h1>
-      <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8"">
-        {% for class in site.data.classes %}
-          <div class="bg-white rounded-lg shadow-md p-6 transition duration-300">
-            <h3 class="text-xl font-semibold mb-2">{{ class.name }}</h3>
-            <p class="text-gray-600 mb-4">{{ class.description }}</p>
-            <a href="{{ class.url }}" class="inline-block bg-red-600 hover:bg-red-700 text-white font-bold py-2 px-4 rounded-full transition duration-300">
-              Learn More
-            </a>
-          </div>
-        {% endfor %}
-      </div>
+      {% include classs-fragment.html %}
     </div>
   </section>
 
