--- a/_layouts/classes/bjj-kids.html
+++ b/_layouts/classes/bjj-kids.html
@@ -21,7 +21,7 @@ permalink: /classes/bjj-kids/
             learn, grow, and build lasting friendships. Through BJJ, children develop discipline, respect, confidence,
             and problem-solving skills that will benefit them both on and off the mats.</p>
           <a href="#schedule"
-            class="inline-block bg-red-600 hover:bg-red-700 text-white font-bold py-2 px-4 rounded transition duration-300">
+            class="inline-block bg-red-600 hover:bg-red-700 text-white font-bold py-2 px-4 rounded-full transition duration-300">
             View Kids BJJ Class Schedule
           </a>
         </div>
